Addition of major in Finance

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	</div>
 	<div class="right">To start and build my own succesful business.
 	<p>Bachelor of Business</p>
-	<p> 
+	<p>Major in Finance</p>
+	<p>
 	<ul>
 	    <li>Completed SA Writing Coach Course</li>
 	    <li>Proficient in Microsoft programs</li>
